test/classes/initializers/records/declaration2.good
declaration2.chpl:12: error: unresolved call 'Foo.init()'
declaration2.chpl:6: note: candidates are: Foo.init(xVal: int)
deleted module lines
